--- a/vignettes/dominatR.Rmd
+++ b/vignettes/dominatR.Rmd
@@ -1,6 +1,6 @@
 ---
 title: "Introduction to dominatR"
-author: "Simon Lizarazo, Ethan Chen, Rajendra KC, Kevin Van Bortle"
+author: "Simon Lizarazo, Ethan Chen, Rajendra K C, Kevin Van Bortle"
 output: rmarkdown::html_document
 vignette: >
   %\VignetteIndexEntry{Introduction to dominatR}
@@ -28,20 +28,13 @@ library(ggplot2)
 
 ```
 
-# Overview
+## Overview
 
-<img src="../man/figures/dominatR_logo.png" align="left" width="132"/>
+<img src="../man/figures/dominatR_logo.png" align="right" width="220"/>
 
-The `dominatR` package provides a flexible suite for feature dominance
-visualization, it uses Shanon's entropy as method for assigning feature
-dominance. The broad idea of dominance visualization relies on the
-spatial localization of observations at the extremes.
+`dominatR` is a genomic data visualization package that applies concepts drawn from physics - such as *center of mass* from classical mechanics and *Shannon's entropy* from statistical mechanics - to effectively visualize features (e.g. genes) that are present within a specific context or condition (e.g. tissue-specific gene expression). `dominatR` is able to integrate `dataframes`, `matrices` and `SummarizedExperiment` objects, perform a number of common genomic normalization methods, compute center of mass, entropy, and categorical entropy values, and generate customizable plots that serve to highlight context-relevant feature dominance. In all examples, dominance visualization is linked to the coordinate spatial localization of each data point, such that full feature dominance is projected at the radial extreme.  
 
-Moreover the package offers tools for normalization and it is compatible
-with common data structures like `matrix`, `data.frame`, and
-`SummarizedExperiment`.
-
-The functions present in the package can be grouped as:
+`dominatoR` package functions can be subgrouped into the following categories:
 
 -   **Normalization Functions:** Contains basic normalization methods,
     such as:
@@ -74,19 +67,18 @@ The functions present in the package can be grouped as:
 
     -   `plot_circle`
 
-This vignettes serves a quick tutorial for using `dominatR`. Further
-manipulation and features present in the package can be explored the
-additional articles.
+This vignette serves as a quick tutorial for using `dominatR`. Further descriptions and examples of
+customization and the additional features present in the package can be explored in the
+companion articles.
 
-## Data
-
-For understanding the features available in this package, the datasets
-available in `dominatRData` are usefull along with the `airway` dataset.
-
-## - Normalization - Quantile Normalization
-
-### A SummarizedExperiment
-
+## Data normalization; computing and plotting feature dominance 
+       
+The data included in this vignette can be found in the `airway` dataset and the supplementary package `dominatRData`
+      
+### Normalization functions (e.g. quantile normalization)
+     
+#### Example 1: `SummarizedExperiment` object   
+   
 ```{r se_norm, eval = TRUE, echo = TRUE, message = FALSE}
 data("airway")
 
@@ -95,9 +87,9 @@ se = quantile_normalization(airway, new_assay_name = 'quantile_norma')
 head(se)
 head(assay(se, 'quantile_norma'))
 ```
-
-### A dataframe
-
+   
+#### Example 2: `dataframe` object     
+  
 ```{r df_norm, eval = TRUE, echo = TRUE, message = FALSE}
 data("atac_tissue_counts")
 
@@ -109,9 +101,9 @@ norm1 = quantile_normalization(norm)
 head(norm1[,1:10])
 ```
 
-## - Calculations - Entropy
+### Calculation functions (e.g. entropy)
 
-### A Summarized Experiment
+#### Example 1: `SummarizedExperiment` object   
 
 ```{r se_entr, eval = TRUE, echo = TRUE, message = FALSE}
 
@@ -123,7 +115,7 @@ head(se)
 head(rowData(se))
 ```
 
-### A Data Frame
+#### Example 2: `dataframe` object    
 
 ```{r df_entr, eval = TRUE, echo = TRUE, message = FALSE}
 
@@ -133,23 +125,22 @@ norm1 = entropy(norm)
 head(norm1[,10:20])
 ```
 
-## - Visualizations
+### Visualization functions (2-, 3-, and N-dimensions)    
 
-All the functions present in the package are able to handle
-`SummarizedExperiment` and `data.frame` objects. This quick introduction
-will show examples using `data.frame` objects. All the functions produce
-graphic and a data.frame with the dominance results, by setting the
-atribute `output_table = FALSE` the dataframe is not displayed. For a
-more detailed usage and aesthetics manipulation refer to the articles in
+All `dominatR` package functions are compatible with `SummarizedExperiment` and `data.frame` objects. 
+This quick introduction will show examples using `data.frame` objects. Each function produces a
+graphic and a `data.frame` with the dominance results; setting the
+atribute `output_table = FALSE` will restrict the dataframe from being displayed. For 
+more details and examples on usage and aesthetics manipulation, refer to the articles in
 the visualization section.
 
-### Two Dimensions
+#### Example 1: Two Dimensions with `plot_rope()`         
 
 `plot_rope` is useful to visualize feature dominance between two
 variables. In this example the function is comparing dominance over gene
 occupancy for RNA Polymerase II and RNA Polymerase III. By default the
-function plots all the points, but the user can adjust `entropy_range`
-values for subsetting specific type of observations.
+function plots all data points, but users can adjust `entropy_range`
+values to subset on observations within a specified range.
 
 ```{r rope_pol3, eval = TRUE, echo = TRUE, message = FALSE}
 data("rnapol_score")
@@ -161,7 +152,7 @@ plot_rope(
         rope_color = 'white',
         pch = c(21, 21), 
         push_text = 1.2,
-        col = c('#F8766d', '#C77CFF'),
+        col = c('#7eb1d5', '#fa8451'),
         output_table = FALSE,
         rope_width = 1
 )
@@ -173,8 +164,8 @@ title(main = 'Gene Occupancy RNA Pol II vs RNA Pol III',
 
 \_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_
 
-Let's filter genes with low entropy and high scores (significant), these
-genes are occupied for either Pol-II and Pol-III
+Below, let's filter for genes with **low entropy** and high significance scores to
+visualize genes that are specifically occupied by either RNA Pol II or RNA Pol III
 
 ```{r rope_pol3_filt, eval = TRUE, echo = TRUE, message = FALSE}
 
@@ -182,7 +173,7 @@ plot_rope(
         data1, 
         rope_color = 'white',
         pch = c(21, 21), 
-        col = c('#F8766d', '#C77CFF'),
+        col = c('#7eb1d5', '#fa8451'),
         push_text = 1.2,
         output_table = FALSE,
         rope_width = 1,
@@ -198,8 +189,8 @@ title(main = 'Gene Occupancy \n RNA Pol II vs RNA Pol III - Specific',
 
 \_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_
 
-Let's filter genes with high entropy and high scores (significant),
-these genes are occupied for both Pol-II and Pol-III
+Below, let's filter for genes with **high entropy** and high significance scores to
+visualize genes that are specifically occupied by both RNA Pol II and RNA Pol III
 
 ```{r rope_pol3_filt1, eval = TRUE, echo = TRUE, message = FALSE}
 
@@ -208,7 +199,7 @@ plot_rope(
         pch = c(21,21), 
         push_text = 1.2,
         rope_color = 'white',
-        col = c('#F8766d', '#C77CFF'),
+        col = c('#7eb1d5', '#fa8451'),
         output_table = FALSE,
         rope_width = 1,
         entropyrange = c(0.8, 1),
@@ -221,21 +212,21 @@ title(main = 'Gene Occupancy \n RNA Pol II vs RNA Pol III - Shared',
 
 ```
 
-### Three Dimensions
+#### Example 2: Three Dimensions with `plot_triangle()`    
 
 `plot_triange` is useful to visualize feature dominance between three
 variables. In this example, the function is comparing dominance over
 gene occupancy for RNA Polymerase I, RNA Polymerase II and RNA
-Polymerase III. By default the function plots all the points, but the
-user can adjust `entropy_range` values for subsetting specific type of
-observations.
+Polymerase III. By default the function plots every data point, 
+but users can again adjust the `entropy_range` attribute 
+values to subset on observations within a specified range.
 
 ```{r trin_pol3, eval = TRUE, echo = TRUE, message = FALSE}
 data1 <- rnapol_score[,5:7]
 
 plot_triangle(data1,
                 output_table = FALSE,
-                col = c('#F8766d', '#C77CFF', '#00BFC4'),
+                col = c('#ff80e3', '#7eb1d5', '#fa8451'),
                 label = TRUE, pch = 21, 
                 push_text = 1.3)
 
@@ -246,15 +237,15 @@ title(main = 'Gene Occupancy \n Pol I vs Pol II vs Pol III',
 
 \_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_
 
-Let's filter genes with low entropy and high scores (significant), these
-genes are occupied for either Pol-I, Pol-II and Pol-III
+Below, let's filter for genes with **low entropy** and high significance scores to
+visualize genes that are specifically occupied by either RNA Pol I, RNA Pol II, or RNA Pol III
 
 ```{r trin_pol3_filt, eval = TRUE, echo = TRUE, message = FALSE}
 data1 <- rnapol_score[,5:7]
 
 plot_triangle(data1, 
                 output_table = FALSE, 
-                col = c('#F8766d', '#C77CFF', '#00BFC4'),
+                col = c('#ff80e3', '#7eb1d5', '#fa8451'),
                 entropyrange = c(0,0.5),
                 label = TRUE, pch = 21,
                 push_text = 1.3)
@@ -267,16 +258,15 @@ title(main = 'Gene Occupancy \n Pol I vs Pol II vs Pol III - Specific',
 
 \_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_
 
-Let's filter genes with high entropy and high scores (significant),
-these genes are occupied for the three polymerases, or for a pair of
-them (p.e, Pol I and Pol II or Pol II and Pol III).
+Below, let's filter for genes with **high entropy** and high significance scores to
+visualize genes that are specifically occupied by all three RNA Pols or combinations of any 2 RNA Pols (e.g. RNA Pol I and RNA Pol II)
 
 ```{r trin_pol3_filt1, eval = TRUE, echo = TRUE, message = FALSE}
 data1 <- rnapol_score[,5:7]
 
 plot_triangle(data1, 
                 output_table = FALSE, 
-                col = c('#F8766d', '#C77CFF', '#00BFC4'),
+                col = c('#ff80e3', '#7eb1d5', '#fa8451'),
                 entropyrange = c(1.5, Inf),
                 label = TRUE, pch = 21,
                 push_text = 1.3)
@@ -287,11 +277,12 @@ title(main = 'Gene Occupancy \n Pol I vs Pol II vs Pol III - Shared',
 
 ```
 
-Therefore as observations start getting closer to the center of the
-triangle and moving away from the vertices, those observations display
-shared features
-
-### N-Dimensions
+Notice that as each data point gets closer to the center (and moving away from the vertices), the observation is characterized by higher entropy and is not dominated by a specific variable (in this case, by a specific RNA polymerase).    
+  
+  
+  
+  
+#### Example 3: N-Dimensions with `plot_circle()`    
 
 `plot_circle` is useful to visualize feature dominance between N-Numbers
 of variables. In this example, the function is comparing RNA-Pol III
@@ -356,7 +347,7 @@ plot_circle(data1,
 ggtitle('Pol III transcribed genes \n accessibility across tissues - Shared')
 ```
 
-## Session Info
+### Session Info
 
 ```{r session-info, echo=FALSE}
 sessionInfo()
